# TaskManager_stpr

./: .gitignore  README.md
TaskMgr/TaskMgr_dbApi_/: CMakeLists.txt  CMakePresets.json  config.json
TaskMgr/TaskMgr_dbApi_/TaskMgr_dbApi_/: CMakeLists.txt  TaskMgr_dbApi_.cpp  TaskMgr_dbApi_.h
TaskMgr/TaskMgr_dbApi_/TaskMgr_dbApi_/Controller/ AuthController/: AuthController.h
TaskMgr/TaskMgr_dbApi_/TaskMgr_dbApi_/Controllers/Service/: SessionsController.cpp  SessionsController.h
TaskMgr/TaskMgr_dbApi_/TaskMgr_dbApi_/Controllers/Session/: SessionsController.cpp  SessionsController.h
TaskMgr/TaskMgr_dbApi_/TaskMgr_dbApi_/Controllers/Sessions/: SessionsController.cpp  SessionsController.h
TaskMgr/TaskMgr_dbApi_/TaskMgr_dbApi_/Controllers/User/: UserController.cpp  UserController.h
TaskMgr/TaskMgr_dbApi_/TaskMgr_dbApi_/DTO/: AuthDTOs.h  LoginRequest.h  RegisterRequest.h  UserDtos.h  UserResponse.h
TaskMgr/TaskMgr_dbApi_/TaskMgr_dbApi_/DTO/Session/: CreateSessionRequestDto.h  RefreshSessionRequestDto.h  SessionResponseDto.h
TaskMgr/TaskMgr_dbApi_/TaskMgr_dbApi_/DTO/User/: CreateUserRequestDto.h  UpdateUserRequestDto.h  UserResponseDto.h
TaskMgr/TaskMgr_dbApi_/TaskMgr_dbApi_/Domain/Interfaces/: IUserRepository.h
TaskMgr/TaskMgr_dbApi_/TaskMgr_dbApi_/Domain/Models/: User.h  (+1 more)
TaskMgr/TaskMgr_dbApi_/TaskMgr_dbApi_/Infrastructure/: DbConfig.h  PgUserRepository.cpp  PgUserRepository.h  PostgresUserRepository.cpp  PostgresUserRepository.h
TaskMgr/TaskMgr_dbApi_/TaskMgr_dbApi_/Models/: User.h
TaskMgr/TaskMgr_dbApi_/TaskMgr_dbApi_/Services/: UserService.h
(+134 files in other folders)
